WM_CREATE消息在CreateWindowEx函数返回之前触发(不会进入消息队列)直接调用WinProc()

--- a/MyIPMsg/MyIPMsg.vcxproj
+++ b/MyIPMsg/MyIPMsg.vcxproj
@@ -134,6 +134,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon1.ico" />
+    <Image Include="wuziqi.bmp" />
+    <Image Include="背景.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
